Documented Duration. Added tests for the samples.

--- a/doc/doc.yaml
+++ b/doc/doc.yaml
@@ -5,3 +5,11 @@ output: dist
 statics:
   - src: static
     dest: .
+
+references:
+  ofZone:
+    file: ts-time/Zone
+    symbol: ZoneId
+    member: of
+    static: true
+    label: of
