--- a/doc/src/ts-time/Instant.yaml
+++ b/doc/src/ts-time/Instant.yaml
@@ -21,21 +21,21 @@ symbols:
     methods:
       atOffset:
         signature: |
-          atOffset(offset: %ZoneOffset): %OffsetDateTime
+          (offset: %ZoneOffset): %OffsetDateTime
         params:
           offset: Time zone offset.
         returns: Date/time indication of the instant in the specified time zone offset.
 
       atZone:
         signature: |
-          atZone(zone: %ZoneId): %ZonedDateTime
+          (zone: %ZoneId): %ZonedDateTime
         params:
           offset: Time zone.
         returns: Date/time indication of the instant in the specified time zone.
 
       compareTo:
         signature: |
-          compareTo(other: %Instant): number
+          (other: %Instant): number
         params:
           other: Instant to compare to.
         returns: |
@@ -44,89 +44,81 @@ symbols:
             <li>positive value if this instant goes after %other;</li>
             <li>negative value if this instant goes before %other.</li>
           </ul>
-          Null and undefined are considered less than anything, except each other.
-          <p class="text-secondary">Note that a method call on null or undefined always leads to an error.
-          So, if your variable may contain null or undefined, use the respective static method instead.</p>
+          Null and undefined are considered less than anything, except each other. %%null
 
       equals:
         signature: |
-          equals(other: %Instant): boolean
+          (other: %Instant): boolean
         params:
           other: Instant to compare to.
         returns: |
-          True if this instant is equal to %other. Null and undefined are only equal to each other.
-          <p class="text-secondary">Note that a method call on null or undefined always leads to an error.
-          So, if your variable may contain null or undefined, use the respective static method instead.</p>
+          True if this instant is equal to %other. Null and undefined are only equal to each other. %%null
 
       isBefore:
         signature: |
-          isBefore(other: %Instant): boolean
+          (other: %Instant): boolean
         params:
           other: Instant to compare to.
         returns: |
-          True if this instant goes before %other. Null and undefined go before anything, except each other.
-          <p class="text-secondary">Note that a method call on null or undefined always leads to an error.
-          So, if your variable may contain null or undefined, use the respective static method instead.</p>
+          True if this instant goes before %other. Null and undefined go before anything, except each other. %%null
 
       isAfter:
         signature: |
-          isafter(other: %Instant): boolean
+          (other: %Instant): boolean
         params:
           other: Instant to compare to.
         returns: |
-          True if this instant goes after %other. Null and undefined go before anything, except each other.
-          <p class="text-secondary">Note that a method call on null or undefined always leads to an error.
-          So, if your variable may contain null or undefined, use the respective static method instead.</p>
+          True if this instant goes after %other. Null and undefined go before anything, except each other. %%null
 
       plus:
         signature: |
-          plus(ms: number | %Duration): %Instant
+          (ms: number | %Duration): %Instant
         params:
           ms: '%Duration or number of milliseconds to add.'
         returns: New %Instant shifted onwards from this one by the specified duration.
 
       minus:
         signature: |
-          minus(ms: number | %Duration): %Instant
+          (ms: number | %Duration): %Instant
         params:
           ms: '%Duration or number of milliseconds to subtract.'
         returns: New %Instant shifted backwards from this one by the specified duration.
 
       until:
         signature: |
-          until(instant: %Instant): %Duration
+          (instant: %Instant): %Duration
         params:
           instant: Another %Instant.
         returns: '%Duration from this instant to the specified one.'
 
       toString:
         signature: |
-          toString(): string
+          (): string
         returns: String representation of the instant in ISO format in %UTC, such as "2019-12-30T14:49:50.254Z".
 
     staticMethods:
       now:
         signature: |
-          now(): %Instant
+          (): %Instant
         returns: Current instant.
 
       ofEpochMs:
         signature: |
-          ofEpochMs(epochMs: number): %Instant
+          (epochMs: number): %Instant
         params:
           epochMs: Number of milliseconds since epoch.
         returns: '%Instant representation.'
 
       fromNative:
         signature: |
-          fromNative(native: Date): %Instant
+          (native: Date): %Instant
         params:
           native: Native JS Date.
         returns: '%Instant representation, for compatibility with native and third party API.'
 
       parse:
         signature: |
-          parse(str: string): %Instant
+          (str: string): %Instant
         params:
           str: |
             String representation of an instant in ISO format in any time zone or offset.
@@ -141,7 +133,7 @@ symbols:
 
       compare:
         signature: |
-          compare(x: %Instant, y: %Instant): number
+          (x: %Instant, y: %Instant): number
         params:
           x: One instant.
           y: Another instant.
@@ -155,7 +147,7 @@ symbols:
 
       equals:
         signature: |
-          equals(x: %Instant, y: %Instant): boolean
+          (x: %Instant, y: %Instant): boolean
         params:
           x: One instant.
           y: Another instant.
@@ -163,7 +155,7 @@ symbols:
 
       isBefore:
         signature: |
-          isBefore(x: %Instant, y: %Instant): boolean
+          (x: %Instant, y: %Instant): boolean
         params:
           x: One instant.
           y: Another instant.
@@ -171,7 +163,7 @@ symbols:
 
       isAfter:
         signature: |
-          isafter(x: %Instant, y: %Instant): boolean
+          (x: %Instant, y: %Instant): boolean
         params:
           x: One instant.
           y: Another instant.
