Better documented and tested difference between Duration and Period.

--- a/doc/doc.yaml
+++ b/doc/doc.yaml
@@ -11,6 +11,10 @@ references:
     file: ts-time/constants
     symbol: MS_PER_DAY
 
+  MS_PER_HOUR:
+    file: ts-time/constants
+    symbol: MS_PER_HOUR
+
   MIDNIGHT:
     file: ts-time/LocalTime
     symbol: MIDNIGHT
