--- a/core/main/tsconfig.json
+++ b/core/main/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
-        "outDir": ".",
-        "sourceMap": true,
+        "outDir": "dist",
+        "inlineSourceMap": true,
+        "inlineSources": true,
         "module": "commonjs",
         "target": "es6",
         "alwaysStrict": true,
