--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "ts-time-tests",
   "private": true,
-  "version": "0.1.1",
-  "scripts": {
-    "build": "node_modules/.bin/webpack --config webpack.conf.js",
-    "watch": "node_modules/.bin/webpack --watch --config webpack.conf.js",
-    "karma": "node_modules/.bin/karma start",
-    "karma-run": "node_modules/.bin/karma start --single-run"
-  },
+  "name": "ts-time-common",
   "devDependencies": {
     "@types/jasmine": "2.8.x",
     "babel-core": "6.26.x",
@@ -23,6 +16,7 @@
     "karma-sourcemap-loader": "~0.3.7",
     "source-map-loader": "0.2.x",
     "ts-loader": "~4.5.0",
+    "ts-time": "file:core/main/dist",
     "typescript": "~3.5.3",
     "webpack": "~4.41.4",
     "webpack-cli": "3.1.x"
