--- a/package.json
+++ b/package.json
@@ -2,23 +2,14 @@
   "private": true,
   "name": "ts-time-common",
   "devDependencies": {
-    "@types/jasmine": "2.8.x",
-    "babel-core": "6.26.x",
-    "babel-loader": "7.1.x",
-    "babel-preset-env": "1.7.x",
-    "clean-webpack-plugin": "0.1.x",
-    "jasmine-core": "~3.3.0",
-    "karma": "~4.0.1",
-    "karma-chrome-launcher": "~3.0.0",
-    "karma-edge-launcher": "~0.4.2",
-    "karma-firefox-launcher": "~1.2.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-sourcemap-loader": "~0.3.7",
-    "source-map-loader": "0.2.x",
-    "ts-loader": "~4.5.0",
+    "@types/chai": "~4.2.7",
+    "@types/mocha": "~5.2.7",
+    "chai": "~4.2.0",
+    "mocha": "~6.2.2",
+    "parcel-bundler": "~1.12.4",
+    "source-map-support": "~0.5.16",
+    "ts-node": "~8.5.4",
     "ts-time": "file:core/main/dist",
-    "typescript": "~3.5.3",
-    "webpack": "~4.41.4",
-    "webpack-cli": "3.1.x"
+    "typescript": "~3.5.3"
   }
 }
