--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "source-map-support": "~0.5.16",
     "ts-node": "~8.5.4",
     "ts-time": "file:core/main/dist",
+    "ts-time-format": "file:format/main/dist",
     "typescript": "~3.5.3"
   }
 }
